--- a/src/app/components/admin/forms/categorize-form/categorize-form.component.html
+++ b/src/app/components/admin/forms/categorize-form/categorize-form.component.html
@@ -1,1 +1,13 @@
-<p>categorize-form works!</p>
+<div class="flex flex-row flex-wrap overflow-scroll w-full h-full">
+    <div class="navbar h-1/6">
+        <div class="navbar-center">
+            <a class="navbar-item">
+                <app-glowing-text textContent="Categorizar Libros"></app-glowing-text>
+            </a>
+        </div>
+    </div>
+
+    <app-categorize-table class="w-full h-full" [header]="table_Header" [body]="table_Body" (onEdit)="onEditClick($event);" #tableRef></app-categorize-table>
+
+    <app-categorize-popup #popupRef></app-categorize-popup>
+</div>
