--- a/src/app/components/admin/tables/categorize-table/categorize-table.component.html
+++ b/src/app/components/admin/tables/categorize-table/categorize-table.component.html
@@ -1,1 +1,37 @@
-<p>categorize-table works!</p>
+<div class="flex w-full overflow-x-auto">
+    <table class="table-zebra table">
+        <thead>
+            <tr>
+                @for (item of header; track $index)
+                {
+                <th>{{item}}</th>
+                }
+            </tr>
+        </thead>
+        <tbody>
+            @if (table_data?.length === 0)
+            {
+            <tr>
+                @for (item of header; track $index)
+                {
+                <td><app-loading-field></app-loading-field></td>
+                }
+            </tr>
+            }
+            @else
+            {
+            @for (item of table_data; track $index)
+            {
+            <tr>
+                <td>{{item.isbn}}</td>
+                <td>@for(category of item.categories; track $index)
+                {
+                    {{category.Name}},
+                }</td>
+                <td><button class="btn btn-outline-success" (click)="onEditFunc(item);">Edit</button></td>
+            </tr>
+            }
+            }
+        </tbody>
+    </table>
+</div>
