--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,8 +2,6 @@
 <div class="flex flex-col gap-5">
     <app-linear-carousel [book_buffer]="masComprados" [prepackedData]="true" header_name="Los mas comprados"></app-linear-carousel>
 
-    <app-linear-carousel header_name="Ultimos Lanzamientos"></app-linear-carousel>
-
     @if(userLoggedIn)
     {
         @if(recomendados.length <= 0)
@@ -20,6 +18,8 @@
     {
         {{tryGetSession()}}
     }
+
+    <app-linear-carousel></app-linear-carousel>
 </div>
 <router-outlet />
 <app-footer></app-footer>
