Added router module to admin sidebar

--- a/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
@@ -234,7 +234,7 @@
 					</div>
 				</label>
 				<div class="dropdown-menu-right-top dropdown-menu ml-2">
-					<a tabindex="-1" class="dropdown-item text-sm">Settings</a>
+					<a tabindex="-1" class="dropdown-item text-sm" [routerLink]="['/config']">Settings</a>
 					<a tabindex="-1" class="dropdown-item text-sm" (click)="returnToSite.emit();">Return to website</a>
 				</div>
 			</div>
